bk_ida/gccida/c1/combine_reversed_comparison_code
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/combine.c:11542:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  combine_reversed_comparison_code( rtx exp) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/combine.c:11544:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/combine.c:11546:4: error: expected ';' after expression
rtx last_value; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/combine.c:11546:5: error: use of undeclared identifier 'last_value'
rtx last_value; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/combine.c:11552:15: error: must use 'enum' tag to refer to type 'mode_class'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)rtx >> 14) & 0x3FC)) == MODE_CC ) 
              ^
              enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/combine.c:11552:39: error: use of undeclared identifier 'mode_class_0'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)rtx >> 14) & 0x3FC)) == MODE_CC ) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/combine.c:11554:1: error: use of undeclared identifier 'last_value'
last_value = get_last_value( rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/combine.c:11556:6: error: use of undeclared identifier 'last_value'; did you mean '_hex_value'?
if ( last_value ) 
     ^~~~~~~~~~
     _hex_value
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/combine.c:11558:17: error: use of undeclared identifier 'last_value'
if ( *( _WORD *)last_value == 74 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/combine.c:11560:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)*( _WORD *)exp, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/combine.c:11560:12: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
( rtx_code)*( _WORD *)exp, 
~~~~~~~~~~~^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/combine.c:11562:9: error: expected expression
*( rtx *)&last_value[1], 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/combine.c:11562:11: error: use of undeclared identifier 'last_value'; did you mean '_hex_value'?
*( rtx *)&last_value[1], 
          ^~~~~~~~~~
          _hex_value
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/combine.c:11561:1: error: use of undeclared identifier 'last_value'
last_value->fld[0].rtx, 
^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_reversed_comparison_code/src/obj/combine.o] Error 1
